commented seed rows

--- a/test nb 10 (Batch Norm).ipynb
+++ b/test nb 10 (Batch Norm).ipynb
@@ -99,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import tensorflow as tf\n",
-    "import random"
+    "# import os \n",
+    "# import tensorflow as tf\n",
+    "# import random"
    ]
   },
   {
@@ -110,12 +110,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# setting seed for reproducible results\n",
-    "def set_seed(seed_value=42):\n",
-    "    os.environ['PYTHONHASHSEED']=str(seed_value)\n",
-    "    random.seed(seed_value)\n",
-    "    np.random.seed(seed_value)\n",
-    "    tf.random.set_seed(seed_value)"
+    "# # setting seed for reproducible results\n",
+    "# def set_seed(seed_value=42):\n",
+    "#     os.environ['PYTHONHASHSEED']=str(seed_value)\n",
+    "#     random.seed(seed_value)\n",
+    "#     np.random.seed(seed_value)\n",
+    "#     tf.random.set_seed(seed_value)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_seed()"
+    "# set_seed()"
    ]
   },
   {
@@ -1108,13 +1108,7 @@
       "14/14 [==============================] - 0s 2ms/step - loss: 9469.4834 - mse: 95057864.0000 - mae: 6868.9458 - val_loss: 9060.5557 - val_mse: 82364656.0000 - val_mae: 6489.4648\n",
       "Epoch 126/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 9475.1855 - mse: 90613376.0000 - mae: 6789.2012 - val_loss: 8982.0400 - val_mse: 80981424.0000 - val_mae: 6238.4116\n",
-      "Epoch 127/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 127/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 9388.0469 - mse: 89991664.0000 - mae: 6775.7598 - val_loss: 8581.4248 - val_mse: 73874744.0000 - val_mae: 6171.8247\n",
       "Epoch 128/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 9257.5938 - mse: 87052288.0000 - mae: 6643.1465 - val_loss: 8639.8740 - val_mse: 74879128.0000 - val_mae: 6015.4790\n",
@@ -1583,13 +1577,7 @@
       "14/14 [==============================] - 0s 2ms/step - loss: 7898.8262 - mse: 68097648.0000 - mae: 5557.0000 - val_loss: 5535.6992 - val_mse: 30974460.0000 - val_mae: 2848.2043\n",
       "Epoch 84/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 7757.6187 - mse: 61497548.0000 - mae: 5324.4512 - val_loss: 7218.6089 - val_mse: 52445004.0000 - val_mae: 4849.6665\n",
-      "Epoch 85/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 85/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 7576.6792 - mse: 59656640.0000 - mae: 5229.5576 - val_loss: 6808.3345 - val_mse: 46640620.0000 - val_mae: 3941.0742\n",
       "Epoch 86/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 7235.1157 - mse: 60456500.0000 - mae: 4998.1787 - val_loss: 6459.1499 - val_mse: 42103148.0000 - val_mae: 3765.6196\n",
@@ -1936,13 +1924,7 @@
       "14/14 [==============================] - 0s 2ms/step - loss: 11123.5107 - mse: 126101640.0000 - mae: 8219.5977 - val_loss: 7962.3672 - val_mse: 63678300.0000 - val_mae: 6360.2324\n",
       "Epoch 42/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 10791.6172 - mse: 120732760.0000 - mae: 7974.7944 - val_loss: 7813.7734 - val_mse: 61320500.0000 - val_mae: 6154.3745\n",
-      "Epoch 43/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 43/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 10382.9121 - mse: 112477864.0000 - mae: 7749.0518 - val_loss: 6220.5928 - val_mse: 38901836.0000 - val_mae: 4048.4587\n",
       "Epoch 44/300\n",
       "14/14 [==============================] - 0s 2ms/step - loss: 10120.4873 - mse: 105921936.0000 - mae: 7439.2236 - val_loss: 6333.4922 - val_mse: 40208572.0000 - val_mae: 4317.4385\n",
